feat(app): implement socket and cronjob:
